# My-CS-learning-Process

./: README.md
Coursework/: .gitignore
Coursework/data-strctures-algorithms/: README.md
Coursework/data-strctures-algorithms/etc/: pro2-1.cpp  pro2-2.cpp  pro2-3.cpp  pro2-4.cpp  pro2-5.cpp  pro2-6.cpp  pro2-7.cpp  pro2-8.cpp
Coursework/data-strctures-algorithms/pro1/: pro1-1.cpp  pro1-2.c  pro1-3.c
Coursework/data-strctures-algorithms/pro2/: pro3-1.cpp  pro3-2.cpp  pro3-3.cpp  pro3-4.cpp
Coursework/data-strctures-algorithms/pro3/: pro4-1.cpp  pro4-2.cpp  pro4-4.cpp
Coursework/java_learning/: HelloWorld.java
Coursework/java_learning/demo/: movie.java  movieoprater.java  test.java
Coursework/java_learning/demo2/: card.java  goldencard.java  silvercard.java  test.java
Coursework/machine-learning/pro1/: 机器学习实验一报告（模板）.docx
Coursework/machine-learning/pro2/: ml_lab2_pytorch_mnist.ipynb  机器学习实验二报告（模板）.docx
Coursework/machine-learning/pro3/code&data/: Lab3.ipynb
Coursework/openharmony/: README.md
Coursework/openharmony/hello/: BUILD.gn  hello.c
Coursework/openharmony/message_demo/: message.c
Coursework/python_learning/: ninenineget.py  todo.py
Coursework/python_learning/project_1/: an_essay.md  conuter-i.py  get.md  split.md  splitandget.py
Coursework/software_engineering/: .gitignore  README.md
Coursework/software_engineering/AircraftWar-base1.0/: README.md
Diary/: Day_1.md  README.md  day-1.md  day-10.md  day-11.md  day-12.md  day-13.md  day-14.md  day-15.md  day-2.md  day-3.md  day-4.md  day-5.md  day-6.md  day-7.md  day-8.md  day-9.md
(+66 files in other folders)
